--- a/sample.env
+++ b/sample.env
@@ -10,7 +10,7 @@ MUSIC_BOT_NAME = xa music
 OWNER_ID = 1224143544
 SUPPORT_CHANNEL = https://t.me/tirexgugel
 SUPPORT_GROUP = https://t.me/rexaprivateroom
-
+MUST_JOIN = Xa_cmd
 
 #CONFIG
 CLEANMODE_MINS = 10
