--- a/sample.env
+++ b/sample.env
@@ -21,8 +21,8 @@ DURATION_LIMIT = 180
 TG_VIDEO_FILESIZE_LIMIT = 2122317824
 
 #APPSTREAM
-UPSTREAM_REPO = https://github.com/Rexashh/YukkiRexa
-UPSTREAM_BRANCH = main
+UPSTREAM_REPO = https://github.com/Rexashh/musicxa
+UPSTREAM_BRANCH = master
 
 #PIC
 GLOBAL_IMG_URL = https://telegra.ph/file/4daa1c90f01048474358b.jpg 
