--- a/sample.env
+++ b/sample.env
@@ -23,6 +23,7 @@ TG_VIDEO_FILESIZE_LIMIT = 2122317824
 #APPSTREAM
 UPSTREAM_REPO = https://github.com/Rexashh/musicxa
 UPSTREAM_BRANCH = master
+GITHUB_REPO = https://github.com/Rexashh/YukkiRexa
 
 #PIC
 GLOBAL_IMG_URL = https://telegra.ph/file/4daa1c90f01048474358b.jpg 
