--- a/sample.env
+++ b/sample.env
@@ -11,7 +11,8 @@ MUSIC_BOT_NAME = xa music
 OWNER_ID = 1224143544
 SUPPORT_CHANNEL = https://t.me/tirexgugel
 SUPPORT_GROUP = https://t.me/rexaprivateroom
-MUST_JOIN = 
+MUST_JOIN = tirexgugel
+
 #CONFIG
 CLEANMODE_MINS = 10
 AUTO_LEAVING_ASSISTANT = True
