Kli aja mau dep di heroku masseh angjay

--- a/app.json
+++ b/app.json
@@ -43,6 +43,11 @@
         "value": "xa music",
         "required": true
       },
+      "MUST_JOIN": {
+        "description": "Your Channel Subscriptions",
+        "value": "tirexgugel",
+        "required": true
+      },
       "OWNER_ID": {
         "description": "The user id(s) of user(s) whom you would like to add as a OWNER. Multiple values shall be seperated with a space.",
         "value": "1224143544",
